css/screen.css
/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/
/* stylelint-disable*/
a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,caption,center,cite,code,dd,del,details,dfn,div,dl,dt,em,embed,fieldset,figcaption,figure,footer,form,h1,h2,h3,h4,h5,h6,header,hgroup,html,i,iframe,img,ins,kbd,label,legend,li,mark,menu,nav,object,ol,output,p,pre,q,ruby,s,samp,section,small,span,strike,strong,sub,summary,sup,table,tbody,td,tfoot,th,thead,time,tr,tt,u,ul,var,video{margin:0;padding:0;border:0;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,main,menu,nav,section{display:block}html{line-height:1}body{line-height:inherit}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:after,blockquote:before,q:after,q:before{content:'';content:none}table{border-collapse:collapse;border-spacing:0}
/* stylelint-enable */

/* Base Styles */

html,
.stylelint {
  font-size: 1.25em;
  /* 20 / 16 = 1.25 */
  line-height: 1.2em;
  /* 24 / 20 = 1.2 */
  font-family: Helvetica, sans-serif;
  background-image: url(../media/gplaypattern_@2X.png);
  background-repeat: repeat;
}

html.movie-backdrop {
  min-height: 100vh;
  background-size: cover;
  background-position: center center;
  background-repeat: no-repeat;
  color: white;
}

img,
video,
audio {
  display: block;
  max-width: 100%;
}

h1 {
  font-size: 1.5em;
  /* 30 / 20 = 1.5 */
  line-height: 1.6em;
  /* 48 / 30 = 1.6 */
}

h2 {
  font-size: 1.25em;
  /* 25 / 20 = 1.25 */
  line-height: 1.44em;
  /* 36 / 25 = 1.44 */
}

header {
  background-color: black;
  text-align: center;
  color: #FFFFFF;
  padding: 0.6em 0 0.6em 0;
}

header a {
  text-decoration: none;
  color: #FFF;
}

footer {
  margin-top: 1.25em;
  margin-bottom: 2em;
  color: #98999B;
  text-align: center;
}

footer a {
  color: #FF6200;
  text-decoration: none;
}

strong {
  font-weight: bold;
}

aside.return {
  background-color: #262626;
  color: white;
  font-family: "PT Sans", sans-serif;
  padding: 1em 1em;
  border-bottom: 0.5em #FF6200 solid;
}

aside.return a {
  color: white;
  text-decoration-color: rgb(156, 60, 0);
}

aside.return li {
  color: #FF6200;
  display: inline-block;
}

aside.return li:nth-child(1) {
  margin: 0 0.5em;
}

aside.return li:nth-child(n+3)::before {
  content: "\2039";
  margin: 0 0.5em 0 0.25em;
}


#header > a {
  color: #FF6200;
}

aside.modal-container {
  position: fixed;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  padding: 20%;
  background-color: rgba(0, 0, 0, 0.8);
}

section.modal {
  background-color: #262626;
  color: white;
  padding: 1em;
}

section.modal section#about-section {
  width: 100%;
}

/* Layout Styles */

.poster {
  margin: auto;
  max-width: 8em;
  border-radius: 0.25em;
  border: 0.05em #FF6200 solid;
  -webkit-box-shadow: -0.05em 0.1em 0.9em -0.1em rgba(0, 0, 0, 0.75);
  -moz-box-shadow: -0.05em 0.1em 0.9em -0.1em rgba(0, 0, 0, 0.75);
  box-shadow: -0.05em 0.1em 0.9em -0.1em rgba(0, 0, 0, 0.75);
  transition: 0.5s ease;
}

.poster:hover {
  opacity: 0.5;
}

.movie-poster {
  margin: auto;
  margin-top: 0.5em;
  margin-bottom: 1em;
  max-width: 11em;
  border-radius: 0.15em;
  -webkit-box-shadow: -0.05em 0.1em 0.9em -0.1em rgba(0, 0, 0, 0.75);
  -moz-box-shadow: -0.05em 0.1em 0.9em -0.1em rgba(0, 0, 0, 0.75);
  box-shadow: -0.05em 0.1em 0.9em -0.1em rgba(0, 0, 0, 0.75);
  transition: 0.5s ease;
}

.movie-title {
  text-align: center;
}

.movie-meta {
  text-align: center;
}

.card {
  background-color: #262626;
  color: #FFF;
  border-radius: 0.1em;
  padding: 1em;
  -webkit-box-shadow: -0.05em 0.1em 0.9em -0.1em rgba(0, 0, 0, 0.75);
  -moz-box-shadow: -0.05em 0.1em 0.9em -0.1em rgba(0, 0, 0, 0.75);
  box-shadow: -0.05em 0.1em 0.9em -0.1em rgba(0, 0, 0, 0.75);
  margin-bottom: 1.333em;
}

.card h3 {
  font-size: 1.1em;
  margin-bottom: 0.5em;
}

.card p {
  font-size: 0.8em;
}

#payment-form li {
  margin-bottom: 1em;
}

#info .card ol li {
  margin-bottom: 0.5em;
}

.card ol li ol {
  margin-top: 0.5em;
}

#payment-form {
  width: 80vw;
  margin: 0 auto;
}

#payment-section {
  width: 80vw;
  margin: 1em auto;
}

#payment-form li input {
  width: 100%;
  padding: 1.25em;
  border: none;
  background-color: #262626;
  color: white;
  border-bottom: solid 0.2em #FF6200;
  box-sizing: border-box;
}

#payment-form li input[type="submit"],
#seats #payment-btn {
  width: 100%;
  font-size: 1em;
  padding: 0.5em;
  background-color: #FF6200;
  color: #FFFFFF;
  text-decoration: none;
  border: none;
  border-radius: 0.15em;
  margin-bottom: 0.5em;
}


#seats #payment-btn {
  display: block;
  text-align: center;
}

#about-section h2,
#about-section p {
  margin-bottom: 0.5em;
}

#payment-form li p {
  padding: 2em 0;
  font-size: 0.75em;
}

h3.movie-seats {
  margin-bottom: 0.5em;
}

#payment-btn {
  margin: auto;
}

#selected-seats {
  margin-bottom: 0.5em;
}

#payment-form p.error {
  padding: 0;
  font-size: 1em;
  margin-left: 1em;
  color: red;
  font-style: italic;
}

#payment-form li input.error {
  background-color: #101010;
  border-bottom: solid 0.2em red;
  border-top: solid 0.2em red;
  box-sizing: border-box;
}

#about-section {
  width: 80vw;
  margin: auto;
}

/* Modular Styles */

#yt-trailer-video {
  width: 100%;
  border: 0.1em #FF6200 solid;
}

#landing {
  background-color: #262626;
  color: white;
  font-family: "PT Sans", sans-serif;
  font-weight: 700;
  padding: 1em 0.5em 1em 1em;
  margin: auto;
  text-align: center;
  border-bottom: 0.5em #FF6200 solid;
}

#landing h1,
#landing h2 {
  vertical-align: middle;
}

#landing img {
  vertical-align: middle;
  float: left;
  width: 4em;
}

#movies {
  padding-left: 0.6em;
  /* 12 / 20 = 0.6 */
  padding-right: 0.6em;
  /* 12 / 20 = 0.6 */
  padding-top: 1em;
}

#movies ul {
  display: grid;
  grid-template-columns: 1fr;
  grid-auto-flow: row;
  grid-gap: 1.5em 1.333em;
}

#movies figcaption {
  margin-top: 0.5em;
  text-align: center;
}

#movies a {
  text-decoration: none;
  color: #000000;
}

#info-section {
  padding-left: 0.6em;
  /* 12 / 20 = 0.6 */
  padding-right: 0.6em;
  /* 12 / 20 = 0.6 */
  padding-top: 1em;
}

#time ol ol a {
  padding: 0.25em;
  background-color: #FF6200;
  color: #FFFFFF;
  text-decoration: none;
  border-radius: 0.15em;
  -webkit-box-shadow: 20.1em 20.1em 20.15em -0.85em rgba(0, 0, 0, 0.4);
  -moz-box-shadow: 20.1em 20.1em 20.15em -0.85em rgba(0, 0, 0, 0.4);
  box-shadow: 20.1em 20.1em 20.15em -0.85em rgba(0, 0, 0, 0.4);
}

#movie-info {
  margin-bottom: 1.333em;
}

/* Seat Selection */

#seats-section {
  padding-top: 1em;
  margin: auto;
}

#seats figure {
  width: 100vw;
  margin: 0 auto;
  margin-bottom: 1em;
}

#screen {
  font-size: 1em;
  color: white;
  margin: 0;
  padding: 0;
  background: #333;
  text-align: center;
  margin-bottom: 1em;
}

.seats {
  width: auto;
  display: flex;
  justify-content: space-between;
  margin-bottom: 0.5em;
}

.row h3 {
  left: -100vw;
  position: absolute;
}

#seats .row .seats a {
  background: grey;
  display: block;
  line-height: 1;
  width: 10vw;
  padding: 3vw 0;
  text-align: center;
  text-decoration: none;
  color: black;
}

#seats .row .seats a.selected {
  background: #FF6200;
}

#seats h3.movie-date {
  margin-bottom: 1em;
}

#seats figcaption {
  margin-bottom: 1em;
}

section.confirmation {
  background-color: #262626;
  color: #FFF;
  border-radius: 0.1em;
  padding: 1em;
  -webkit-box-shadow: -0.05em 0.1em 0.9em -0.1em rgba(0, 0, 0, 0.75);
  -moz-box-shadow: -0.05em 0.1em 0.9em -0.1em rgba(0, 0, 0, 0.75);
  box-shadow: -0.05em 0.1em 0.9em -0.1em rgba(0, 0, 0, 0.75);
}

section.confirmation h2.movie-title {
  text-align: left;
  font-size: 1em;
}

/* State Styles */

@media only screen and (min-width: 370px) {
  #movies ul {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-auto-flow: row;
    grid-gap: 1.5em 1.333em;
  }
}

@media only screen and (min-width: 520px) {

  #seats figure,
  #seats-section {
    width: 26em;
    /* 520/20 = */
  }

  #seats .row .seats a {
    width: 3em;
    /*60/20 = 3*/
    padding: 1em 0;
    /*20/20 = 3em*/
  }

  #info ol ol {
    display: flex;
  }

  #info .card ol li {
    margin-right: 1em;
  }

}

@media only screen and (min-width: 700px) {

  #movies ul {
    grid-template-columns: 1fr 1fr 1fr;
  }

  .poster {
    max-width: 10em;
  }

  #landing img {
    float: none;
    margin: auto;
  }

  #header > a {
    position: absolute;
    right: 1.5em;
    top: 0.7em;
    font-size: 1em;
    padding: 0.5em;
    background-color: #FF6200;
    color: #FFFFFF;
    text-decoration: none;
    border: none;
    border-radius: 0.15em;
    margin-bottom: 0.5em;
  }

}

@media only screen and (min-width: 1280px) {

  #landing,
  #movies {
    padding-right: 20%;
    padding-left: 20%;
  }

  .movie-poster {
    max-width: 12.5em;
  }

  #info-section {
    display: flex;
    padding-right: 15%;
    padding-left: 15%;
    align-items: stretch;
  }

  #info-section #left-section {
    width: 50%;
    margin: 0 auto;
  }

  #info-section #right-section {
    width: 50%;
    margin: 0 auto;
  }

  .poster {
    max-width: 10em;
  }

  #payment-form,
  #payment-section {
    width: 50vw;
  }

  #about-section {
    width: 50vw;
    margin: auto;
  }

}

@media only screen and (min-width: 1920px) {

  .poster {
    max-width: 11em;
  }

}

